
Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.xx
DATE xx/xx/2007
8th Alpha Release

NEWS:

NEW: [features/improvements]
+Major improvements to python autocompletion
+Tab completion for command buffer Edit and Change Directory commands
+Automatic perspective mode for saving window state on exit
+Text selection and whitespace style are now configurable through style settings
+New Blue color scheme for syntax highlighting can be enabled in preferences

BUG FIXES:
+Fixed a number of python2.4 compatibility issues
+Fixed bug in styling of code folding margin
+Fixed bugs in updating toolbar/menus

#-----------------------------------------------------------------------------#

VERSION 0.2.15
DATE 10/30/2007
7th Alpha Release

NEWS:
This is mostly a bug fix release that resolves a number of issues throughout the
editor. Most notably are a correction to some performance issues on Mac OSX,
a number of UI related issues on Linux, and a fair number of fixes to the
Style Editor.

From this release onwards updating to the new version of Editra will no longer 
require you to reconfigure all of your preferences as profiles are now incrementally
updated so only settings that need to be changed or added are while not affecting
all the other saved settings.

There is also a number of new plugins available with this release, most notably
it is the first public release of the Projects plugin.  The Projects plugin 
transparently works with your file system and source control.  When you add a 
project (i.e., a directory) to the plugin, you can open files in the editor 
simply by double-clicking them in the tree view.  Files that are selected in 
the editor will automatically display in the tree view if that file exists in 
one of your registered projects.  In addition, the Projects plugin tracks files 
under source control (CVS, Subversion, and GIT).  The status of the file is 