@@ -756,7 +756,8 @@ def DefaultStyleDictionary():
          'dockey_style' : StyleItem("#0000FF"),
          'error_style' : StyleItem("#DD0101,bold", face="%(secondary)s"),
          'funct_style' : StyleItem("#008B8B,italic"),
-         'global_style' : StyleItem("#007F7F,bold", face="%(secondary)s"), 
+         'global_style' : StyleItem("#007F7F,bold", face="%(secondary)s"),
+         'guide_style' : StyleItem("#838383"),
          'here_style' : StyleItem("#CA61CA,bold", face="%(secondary)s"),
          'ideol_style' : StyleItem("#E0C0E0", face="%(secondary)s"),
          'keyword_style' : StyleItem("#A52B2B,bold"),
