@@ -70,6 +70,10 @@ global_style {
 		face: %(secondary)s;
 }
 
+guide_style {
+        fore: #F6F6F6;
+}
+
 here_style {
 		fore: #CA61CA bold;
 		face: %(secondary)s;
